# Desafio-Analytics

./: .gitattributes  .gitignore  README.md  curr_dev_readme_utf8.md  pyproject.toml  requirements.txt  run_dashboard.py
data/processed/: 01_market_data_processed.csv  01_market_data_processed.parquet
data/processed/setores/: Basic_Materials.parquet  Communication_Services.parquet  Consumer_Cyclical.parquet  Consumer_Defensive.parquet  Energy.parquet  Financial_Services.parquet  Healthcare.parquet  Industrials.parquet  Outros.parquet  Real_Estate.parquet  Technology.parquet  Utilities.parquet
data/raw/: 01_yfinance_precos_raw.csv  02_yfinance_eventos_raw.csv  03_yfinance_info_raw.csv  04_yfinance_balancos_raw.csv  05_CVM_Historico_Focado.csv  dividendos_b3_mestre.csv  indicadores_economicos_10anos.csv  precos_b3_mestre.csv
docs/: DOCUMENTACAO_PROJETO.md  DOCUMENTACAO_TECNICA.md  data_dictionary.md  financial_statements_pipeline(CVM).md  macro_data_pipeline(BC).md  market_data_pipeline(YFinance).md  master_data_lake_pipeline.md  relatorio_tickers_b3.md
notebooks/: 01_market_data_extraction.ipynb  02_cvm_elite_extraction.ipynb  03_data_engineering_metrics.ipynb  04_financial_sector_blueprint.ipynb  05_investimento_value_investing_insights.ipynb  08_geracao_insights.ipynb  09_resumo_dataset.ipynb  README_Value_Investing_Insights.md  analytics.ipynb  b3_analytics.ipynb
src/: coleta_básica.py
src/b3_analytics/app/: main.py
src/b3_analytics/data/: 01_bcb_macro_extraction.py  02_yfinance_data_extraction.py  03_cvm_elite_extraction.py  03_validation.py  04_process_market_data.py  clean_raw_data.py  cvm_elite_extraction.py  market_data.py  (+1 more)
(+3 files in other folders)
