[tool.poetry]
name = "b3-analytics-project"
version = "1.0.0"
description = "Quantitative Analytics Pipeline for B3"
authors = ["Group 2 - NYX"]
packages = [{ include = "b3_analytics", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

pandas = "^2.2"
numpy = "^1.26"
yfinance = "^0.2"
requests = "^2.31"
tqdm = "^4.66"
matplotlib = "^3.8"
seaborn = "^0.13"
scipy = "^1.11"
statsmodels = "^0.14"
plotly = "^5.20"
dash = "^2.16"
fundamentus = "^0.2.0"
python-bcb = "^0.1.8"
pyarrow = "^23.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^23.12"
isort = "^5.13"
jupyter = "^1.0"
ipykernel = "^6.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"